src/objects/details__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Please select one</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PatientID__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pt_Address__c</fullName>
        <label>Pt Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pt_Contact_Num__c</fullName>
        <label>Pt Contact Num</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pt_Email_ID__c</fullName>
        <label>Pt Email ID</label>
        <type>Email</type>
    </fields>
    <label>Patient detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>